--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "stable-serialize",
   "version": "0.0.0",
-  "description": "",
+  "description": "Consistent stringify and hash for deeply equal objects",
   "main": "index.js",
   "scripts": {
     "test": "jest"
