--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stable-serialize",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Consistent stringify and hash for deeply equal objects",
   "main": "index.js",
   "scripts": {
@@ -10,5 +10,9 @@
   "license": "ISC",
   "devDependencies": {
     "jest": "^24.5.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/stdlib/stable-serialize"
   }
 }
